--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,7 +18,10 @@ dependencies = [
     "alembic (>=1.15.1,<2.0.0)",
     "python-dotenv (>=1.0.1,<2.0.0)",
     "psycopg2-binary (>=2.9.10,<3.0.0)",
-    "isort (>=6.0.1,<7.0.0)"
+    "isort (>=6.0.1,<7.0.0)",
+    "pydantic-settings (>=2.8.1,<3.0.0)",
+    "asyncpg (>=0.30.0,<0.31.0)",
+    "greenlet (>=3.1.1,<4.0.0)"
 ]
 
 
