--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,7 +21,11 @@ dependencies = [
     "isort (>=6.0.1,<7.0.0)",
     "pydantic-settings (>=2.8.1,<3.0.0)",
     "asyncpg (>=0.30.0,<0.31.0)",
-    "greenlet (>=3.1.1,<4.0.0)"
+    "greenlet (>=3.1.1,<4.0.0)",
+    "pytest (>=8.3.5,<9.0.0)",
+    "httpx (>=0.28.1,<0.29.0)",
+    "aiosqlite (>=0.21.0,<0.22.0)",
+    "pytest-asyncio (>=0.25.3,<0.26.0)"
 ]
 
 
@@ -40,3 +44,10 @@ include_trailing_comma = true
 force_grid_wrap = 0
 use_parentheses = true
 ensure_newline_before_comments = true
+
+[tool.pytest.ini_options]
+pythonpath = [
+  "."
+]
+
+asyncio_mode = "auto"
