--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -9,14 +9,15 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    environment: dev
     
     services:
       postgres:
         image: postgres:15
         env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: test_db
+          POSTGRES_USER: ${{ secrets.DB_USER }}
+          POSTGRES_PASSWORD: ${{ secrets.DB_PASS }}
+          POSTGRES_DB: ${{ secrets.DB_NAME }}
         ports:
           - 5432:5432
         options: >-
@@ -45,24 +46,19 @@ jobs:
         cd backend
         poetry install --no-interaction
     
-    - name: Lint with black and isort
-      run: |
-        cd backend
-        poetry run black . --check
-        poetry run isort . --check-only
-    
     - name: Test with pytest
       run: |
         cd backend
         poetry run pytest
       env:
-        DATABASE_URL: postgresql+asyncpg://postgres:postgres@localhost:5432/test_db
-        SECRET_KEY: "test_secret_key"
+        DATABASE_URL: postgresql+asyncpg://${{ secrets.DB_USER }}:${{ secrets.DB_PASS }}@${{ secrets.DB_HOST }}:5432/${{ secrets.DB_NAME }}
+        SECRET_KEY: ${{ secrets.SECRET_KEY }}
         ENVIRONMENT: "test"
     
   docker-build-and-test:
     runs-on: ubuntu-latest
     needs: test
+    environment: dev
     
     steps:
     - uses: actions/checkout@v3
@@ -72,27 +68,35 @@ jobs:
     
     - name: Build and test Docker image
       run: |
+        # Clear any existing containers and networks
+        docker system prune -f
+        
         cd backend
         docker build -t backend-app:test .
         
         # Create a test network
         docker network create test-network
         
-        # Run a Postgres container for testing
+        # Use environment secrets for database credentials
         docker run -d \
           --name postgres-test \
           --network test-network \
-          -e POSTGRES_USER=postgres \
-          -e POSTGRES_PASSWORD=postgres \
-          -e POSTGRES_DB=test_db \
+          -e POSTGRES_USER=${{ secrets.DB_USER }} \
+          -e POSTGRES_PASSWORD=${{ secrets.DB_PASS }} \
+          -e POSTGRES_DB=${{ secrets.DB_NAME }} \
           postgres:15
+        
+        # Check if postgres is running
+        docker ps
+        echo "Waiting for postgres to be ready..."
+        sleep 15
         
         # Run the application container with test environment
         docker run -d \
           --name backend-test \
           --network test-network \
-          -e DATABASE_URL=postgresql+asyncpg://postgres:postgres@postgres-test:5432/test_db \
-          -e SECRET_KEY=test_secret_key \
+          -e DATABASE_URL=postgresql+asyncpg://${{ secrets.DB_USER }}:${{ secrets.DB_PASS }}@postgres-test:5432/${{ secrets.DB_NAME }} \
+          -e SECRET_KEY=${{ secrets.SECRET_KEY }} \
           -e ENVIRONMENT=test \
           backend-app:test
         
@@ -116,6 +120,7 @@ jobs:
   build:
     needs: [test, docker-build-and-test]
     runs-on: ubuntu-latest
+    environment: dev
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     
     steps:
@@ -124,24 +129,18 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
     
-    - name: Login to DockerHub
-      uses: docker/login-action@v2
-      with:
-        # Replace with your own registry credentials or use GitHub secrets
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-    
-    - name: Build and push Docker image
+    - name: Build Docker image locally (without push)
       uses: docker/build-push-action@v4
       with:
         context: ./backend
-        push: true
-        tags: |
-          yourusername/backend-app:latest
-          yourusername/backend-app:${{ github.sha }}
+        push: false
+        load: true
+        tags: backend-app:latest
     
-    # In a real-world scenario, you might want to add deployment steps here
-    # For example, deploying to a cloud provider or container registry
+    - name: Verify Docker image
+      run: |
+        docker image ls
+        echo "Docker image built successfully"
     
     - name: Set up Python
       uses: actions/setup-python@v4
