--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,6 +20,7 @@ pydantic-settings = "^2.8.1"
 asyncpg = "^0.30.0"
 greenlet = "^3.1.1"
 aiosqlite = "^0.21.0"
+httpx = "^0.28.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^4.1.0"
