--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,36 +1,37 @@
-[project]
+[tool.poetry]
 name = "backend"
 version = "0.1.0"
 description = ""
-authors = [
-    {name = "Berkay",email = "theberkayugur@gmail.com"}
-]
+authors = ["Berkay <theberkayugur@gmail.com>"]
+readme = "README.md"
+packages = [{include = "backend"}]
 
-requires-python = ">=3.11"
-dependencies = [
-    "fastapi (>=0.115.11,<0.116.0)",
-    "uvicorn (>=0.34.0,<0.35.0)",
-    "sqlalchemy (>=2.0.38,<3.0.0)",
-    "pydantic (>=2.10.6,<3.0.0)",
-    "watchfiles (>=1.0.4,<2.0.0)",
-    "pre-commit (>=4.1.0,<5.0.0)",
-    "black (>=25.1.0,<26.0.0)",
-    "alembic (>=1.15.1,<2.0.0)",
-    "python-dotenv (>=1.0.1,<2.0.0)",
-    "psycopg2-binary (>=2.9.10,<3.0.0)",
-    "isort (>=6.0.1,<7.0.0)",
-    "pydantic-settings (>=2.8.1,<3.0.0)",
-    "asyncpg (>=0.30.0,<0.31.0)",
-    "greenlet (>=3.1.1,<4.0.0)"
-]
+[tool.poetry.dependencies]
+python = "^3.11"
+fastapi = "^0.115.11"
+uvicorn = "^0.34.0"
+sqlalchemy = "^2.0.38"
+pydantic = "^2.10.6"
+watchfiles = "^1.0.4"
+alembic = "^1.15.1"
+python-dotenv = "^1.0.1"
+psycopg2-binary = "^2.9.10"
+pydantic-settings = "^2.8.1"
+asyncpg = "^0.30.0"
+greenlet = "^3.1.1"
+aiosqlite = "^0.21.0"
+httpx = "^0.28.1"
 
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^4.1.0"
+black = "^25.1.0"
+isort = "^6.0.1"
+pytest = "^8.3.5"
+pytest-asyncio = "^0.25.3"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.poetry]
-package-mode = false
 
 [tool.isort]
 profile = "black"
@@ -40,3 +41,9 @@ include_trailing_comma = true
 force_grid_wrap = 0
 use_parentheses = true
 ensure_newline_before_comments = true
+
+[tool.pytest.ini_options]
+pythonpath = [
+  "."
+]
+asyncio_mode = "auto"
