--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,6 +21,7 @@ asyncpg = "^0.30.0"
 greenlet = "^3.1.1"
 aiosqlite = "^0.21.0"
 httpx = "^0.28.1"
+mangum = "^0.19.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^4.1.0"
