--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,7 @@
     "clsx": "^2.1.1",
     "geist": "^1.3.1",
     "lucide-react": "^0.479.0",
-    "next": "15.2.1",
+    "next": "^15.2.1",
     "next-themes": "^0.4.4",
     "radix-ui": "^1.1.3",
     "react": "^19.0.0",
