--- a/infrastructure/pyproject.toml
+++ b/infrastructure/pyproject.toml
@@ -1,10 +1,16 @@
+[tool.poetry]
+name = "infrastructure"
+version = "0.1.0"
+description = ""
+authors = ["Berkay <theberkayugur@gmail.com>"]
+readme = "README.md"
+packages = [{include = "infrastructure"}]
+package-mode = false
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
-[tool]
-[tool.poetry]
-package-mode = false
 [tool.poetry.dependencies]
 pulumi = ">=3.0.0,<4.0.0"
 pulumi-aws = ">=6.0.2,<7.0.0"
